css/style.css
/***************************/
/* NAVIGATION */
/***************************/

.main-nav {
}

.main-nav-list {
  display: flex;
  gap: 4.8rem;
  align-items: center;

  list-style: none;
}

.main-nav-link:link,
.main-nav-link:visited {
  display: inline-block;

  text-decoration: none;
  color: #333;
  font-weight: 500;
  font-size: 1.8rem;

  transition: all 300ms;
}

.main-nav-link:hover,
.main-nav-link:active {
  color: #cf711f;
}

.main-nav-link.nav-cta:link,
.main-nav-link.nav-cta:visited {
  color: #fff;
  background-color: #e67e22;

  padding: 1.2rem 2.4rem;
  border-radius: 9px;
}

.main-nav-link.nav-cta:hover,
.main-nav-link.nav-cta:active {
  background-color: #cf711f;
}

.btn-mobile-nav {
  border: none;
  background-color: none;
  cursor: pointer;

  display: none;
}

.icon-mobile-nav {
  height: 4.8rem;
  width: 4.8rem;
  color: #333;
}

.icon-mobile-nav[name="close-outline"] {
  display: none;
}

/***************************/
/* HEADER */
/***************************/

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  background-color: #fdf2e9;

  height: 9.6rem;
  padding: 0 4.8rem;
  position: relative;
}

.logo {
  height: 2.2rem;
}

/***************************/
/* HERO */
/***************************/

.section-hero {
  background-color: #fdf2e9;

  padding: 4.8rem 0 9.6rem 0;
}

.hero {
  display: grid;
  max-width: 130rem;

  grid-template-columns: 1fr 1fr;
  gap: 9.6rem;
  align-items: center;
}

.hero-description {
  font-size: 2rem;
  line-height: 1.5;

  margin-bottom: 4.8rem;
}

.hero-img {
  width: 100%;
}

.delivered-meals {
  display: flex;
  align-items: center;
  gap: 1.6rem;

  margin-top: 8rem;
}

.delivered-imgs {
  display: flex;
}

.delivered-imgs img {
  height: 4.8rem;
  width: 4.8rem;
  border-radius: 50%;
  margin-right: -1.6rem;
  border: 3px solid #fdf2e9;
}

.delivered-imgs img:last-child {
  margin: 0;
}

.delivered-text {
  font-size: 1.8rem;
  font-weight: 600;
}

.delivered-text span {
  color: #cf711f;
  font-weight: 700;
}

/***************************/
/* FEATURED IN */
/***************************/

.section-featured-in {
  padding: 4.8rem 0 3.2rem 0;
}
.heading-featured-in {
  color: #777;
  font-size: 1.4rem;
  font-weight: 500;
  letter-spacing: 1px;
  text-transform: uppercase;
  text-align: center;

  margin-bottom: 2.4rem;
}
.logos {
  display: flex;
  justify-content: space-around;
}

.logos img {
  height: 3.2rem;
  filter: brightness(0);
  opacity: 0.7;
}

/***************************/
/* HOW IT WORKS */
/***************************/

.section-how {
  padding: 9.6rem 0;
}

.step-text-box {
}
.step-number {
  font-size: 8.6rem;
  font-weight: 600;
  color: #ddd;

  margin-bottom: 1.2rem;
}
.step-description {
  font-size: 1.8rem;
  line-height: 1.8;
}
.step-img-box {
  display: flex;
  justify-content: center;
  align-items: center;

  position: relative;
}

.step-img-box::before,
.step-img-box::after {
  content: "";
  display: block;

  border-radius: 50%;

  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.step-img-box::before {
  background-color: #fdf2e9;

  width: 60%;
  padding-bottom: 60%;
  z-index: -2;
}

.step-img-box::after {
  background-color: #fae5d3;

  width: 45%;
  padding-bottom: 45%;
  z-index: -1;
}

.step-img {
  width: 35%;
}

/***************************/
/* MEALS */
/***************************/

.section-meals {
  padding: 9.6rem 0;
}

.meal {
  border-radius: 1.1rem;
  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
  overflow: hidden;

  transition: all 500ms;
}

.meal:hover {
  transform: translateY(-0.5rem);
  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
}

.meal-content {
  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
}

.meal-tags {
  display: flex;
  gap: 0.4rem;

  margin-bottom: 1.2rem;
}

.tag {
  display: inline-block;

  padding: 0.4rem 0.8rem;
  border-radius: 100px;

  color: #333;
  font-size: 1.2rem;
  text-transform: uppercase;
  font-weight: 600;
}

.tag--vegeterian {
  background-color: #51cf66;
}

.tag--vegan {
  background-color: #82c91e;
}

.tag--paleo {
  background-color: #f59f00;
}

.meal-img {
  width: 100%;
}

.meal-icon {
  height: 2.4rem;
  width: 2.4rem;
  color: #e67e22;
}

.meal-name {
  font-size: 2rem;
  color: #333;
  font-weight: 600;

  margin-bottom: 3.2rem;
}

.meal-attributes {
  display: flex;
  flex-direction: column;
  gap: 2rem;

  list-style: none;
}

.meal-attribute {
  display: flex;
  align-items: center;
  gap: 1.6rem;

  font-size: 1.8rem;
}

.diets {
}

.all-recipes {
  text-align: center;
  font-size: 1.8rem;
}

/***************************/
/* TESTIMONIALS */
/***************************/

.section-testimonials {
  display: grid;
  grid-template-columns: 55fr 45fr;
  align-items: center;

  background-color: #fdf2e9;
}

.testimonials-container {
  padding: 9.6rem;
}

.testimonials {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  row-gap: 4.8rem;
  column-gap: 8rem;
}

.testimonial-img {
  width: 6.4rem;
  border-radius: 50%;

  margin-bottom: 1.2rem;
}

.testimonial-text {
  font-size: 1.8rem;
  line-height: 1.8;

  margin-bottom: 1.6rem;
}

.testimonial-name {
  font-size: 1.6rem;
  color: #6f6f6f;
}

.gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1.6rem;

  padding: 1.6rem;
}

.gallery-item {
  overflow: hidden;
}

.gallery-item img {
  display: block;
  width: 100%;

  transition: all 500ms;
}

.gallery-item img:hover {
  transform: scale(1.1);
}

/***************************/
/* PIRCING */
/***************************/

.section-pricing {
  padding: 9.6rem 0;
}

.pricing-plan {
  border-radius: 11px;
  width: 75%;
}

.pricing-plan--starter {
  justify-self: end;
  border: 2px solid #fdf2e9;
  padding: 4.6rem;
}

.pricing-plan--complete {
  background-color: #fdf2e9;
  padding: 4.8rem;
  overflow: hidden;

  position: relative;
}

.pricing-plan--complete::after {
  content: "Best value";
  background-color: #ffd43b;
  color: #333;
  text-transform: uppercase;
  font-size: 1.4rem;
  font-weight: 700;

  padding: 0.8rem 8rem;
  width: 120px;
  transform: rotate(45deg);

  position: absolute;
  top: 8%;
  right: -26%;
}

.plan-header {
  text-align: center;
  margin-bottom: 4.8rem;
}

.plan-name {
  color: #cf711f;
  font-weight: 600;
  font-size: 2rem;
  text-transform: uppercase;
  letter-spacing: 0.75;

  margin-bottom: 3.2rem;
}

.plan-price {
  font-size: 6.2rem;
  font-weight: 600;
  columns: #333;

  margin-bottom: 1.6rem;
}

.plan-price span {
  font-size: 3rem;
  font-weight: 500;

  margin-right: 0.8rem;
}

.plan-text {
  font-size: 1.6rem;
  line-height: 1.6;
  color: #6f6f6f;
}

.plan-sign-up {
  text-align: center;
  margin-top: 4.8rem;
}

.plan-details {
  font-size: 1.6rem;
  line-height: 1.6;
  text-align: center;
}

.feature {
}

.feature-icon {
  background-color: #fdf2e9;
  color: #e67e22;
  height: 3.2rem;
  width: 3.2rem;

  margin-bottom: 3.2rem;
  padding: 1.6rem;
  border-radius: 50%;
}

.feature-title {
  font-size: 2.4rem;
  color: #333;
  font-weight: 700;

  margin-bottom: 1.6rem;
}

.feature-text {
  font-size: 1.8rem;
  line-height: 1.8;
}

/***************************/
/* PIRCING */
/***************************/

.section-cta {
  padding: 4.8rem 0 12.8rem 0;
}

.cta {
  display: grid;
  grid-template-columns: 2fr 1fr;

  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
  background-image: linear-gradient(135deg, #eb984e, #e67e22);
  border-radius: 11px;
  overflow: hidden;
}

.cta-text-box {
  color: #45260a;

  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
}

.cta-text {
  font-size: 1.8rem;
  line-height: 1.8;

  margin-bottom: 4.8rem;
}

.cta .heading-secondary {
  color: inherit;

  margin-bottom: 3.2rem;
}

.cta-image-box {
  background-image: linear-gradient(
      135deg,
      rgba(235, 151, 78, 0.3),
      rgba(230, 125, 34, 0.3)
    ),
    url("../img/eating.jpg");
  background-size: cover;
  background-position: center;
}

/************ CTA FORM *************/

.cta-form {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 3.2rem;
  row-gap: 2.4rem;
}

.cta-form label {
  display: block;
  font-size: 1.6rem;
  font-weight: 500;
  margin-bottom: 1.2rem;
}
.cta-form input,
.cta-form select {
  width: 100%;
  padding: 1.2rem;
  font-size: 1.8rem;
  font-family: inherit;
  color: inherit;

  border: none;
  background-color: #fdf2e9;
  border-radius: 9px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
}

.cta-form input::placeholder {
  color: #aaa;
}

.cta *:focus {
  outline: none;
  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
}

/***************************/
/* PIRCING */
/***************************/

.footer {
  padding: 12.8rem 0;
  border-top: 1px solid #eee;
}

.grid--footer {
  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
}

.social-links {
  display: flex;
  gap: 2.4rem;
  justify-content: center;

  list-style: none;
}

.logo-col {
  display: flex;
  flex-direction: column;
}

.footer-logo {
  display: block;
  margin-bottom: 3.2rem;
}

.social-icon {
  height: 2.4rem;
  width: 2.4rem;
}

.copyright {
  font-size: 1.4rem;
  line-height: 1.6;
  color: #767676;

  margin-top: auto;
}

.address-col {
}

.nav-col {
}

.footer-heading {
  font-size: 1.8rem;
  font-weight: 500;

  margin-bottom: 4rem;
}
.footer-nav {
  display: flex;
  flex-direction: column;
  gap: 1.4rem;

  list-style: none;
}

.footer-link:link,
.footer-link:visited {
  text-decoration: none;
  font-size: 1.6rem;
  color: #767676;
  transition: all 300ms;
}

.footer-link:hover,
.footer-link:active {
  color: #555;
}

.address-col {
}

.footer-heading {
}

.contacts {
  font-style: normal;
  font-size: 1.6rem;
  line-height: 1.6;
}

.contacts p:first-child {
  margin-bottom: 2.4rem;
}

